@@ -1,3 +1,12 @@
+// This JavaScript code defines several functions for changing the title and icon of a web page and for resetting the title and icon to their default values. It also includes a function for validating URLs.
+// The code begins by setting the focus on an element with the ID "userinput" and defining some variables that reference elements with specific IDs.
+// It then defines the changeTabTitle function, which gets the value of an element with the ID "userinput" and uses it to set the title of the current web page and the value of the "title" item in local storage. If the input is blank, it removes the "title" item from local storage and sets the title of the page to the default. It also logs a message to an element with the ID "console-output" and changes the color of the text to reflect the success or failure of the operation.
+// The changeTabIcon function does the same thing for the icon of the web page, using the querySelector method to select the link element with a "rel" attribute of "icon" and setting its "href" attribute to the value of the input. It also uses the validURL function to validate the input as a URL before making the change.
+// The resetTabSettings function removes the "icon" and "title" items from local storage and reloads the page.
+// The applyUrl function sets the value of the input and applies the changeTabIcon and changeTabTitle functions to it. It also logs a message to the "console-output" element and changes the color of the text to green.
+// The validURL function takes in a string str and uses a regular expression to test if it is a valid URL. It returns true if the string is a valid URL and false if it is not.
+// Help generated by ChatGPT
+
 //Autofocus without scroll
 document.querySelector("#userinput").focus({
   preventScroll: true
