@@ -1,4 +1,10 @@
-//Declare variables for cloak here
+// This JavaScript code is used to set the title and icon of a web page based on values stored in local storage.
+// The code first declares two variables, local_title and local_icon, which are set to the values of the items "title" and "icon" in local storage, respectively.
+// It then checks if the "title" item exists in local storage using the hasOwnProperty method. If it does, it sets the title of the current web page to the value of local_title and logs a message to the console. If it does not, it logs a message to the console saying "Title not set :(".
+// It then does the same thing for the "icon" item, using the querySelector method to select the link element with a "rel" attribute of "icon", and setting its "href" attribute to the value of local_icon. If the "icon" item does not exist in local storage, it logs a message to the console saying "Icon not set :(".
+// Help generated by ChatGPT
+
+// Declare variables for cloak here
 const local_title = localStorage.getItem("title");
 const local_icon = localStorage.getItem("icon");
 
