@@ -1,4 +1,8 @@
-// Here we will check to see if this instance of the site is up to date or not
+// This JavaScript code is using the fetch API to make a request to the GitHub API for the latest release of a repository. If the request fails, it will run the function showMessage with the argument "fetchFail". If the request is successful, it will parse the response as JSON and store it in the data variable.
+// It will then make another request to the /info.json endpoint and parse the response as JSON. It compares the tag_name property of the data variable (which corresponds to the latest release version from the first request) to the version property of the second response. If they are the same, it logs a message to the console saying "The versions are the same." If they are different, it logs a warning message saying "The versions are different! This could be a API error or the site is out of date."
+// If the versions are different and the script is not being run on the "3kh0.github.io" domain, it will run the showMessage function with the argument "snackbar". If the script is being run on the "3kh0.github.io" domain, it will log a message saying "The versions are different, but this is because the site has not finished building yet!".
+//The showMessage function takes an element with an ID of the passed argument and adds the class "show" to it. It then sets a timeout to remove the "show" class after 5 seconds.
+// Help generated by ChatGPT
 
 fetch("https://api.github.com/repos/3kh0/3kh0.github.io/releases/latest")
   .catch((error) => {
@@ -8,17 +12,13 @@ fetch("https://api.github.com/repos/3kh0/3kh0.github.io/releases/latest")
   })
   .then((response) => response.json())
   .then((data) => {
-    // data contains the latest release information
     const apiReleaseVersion = data.tag_name;
 
-    // parse the JSON file
     fetch("/info.json")
       .then((response) => response.json())
       .then((json) => {
-        // json.version contains the version from the JSON file
         const jsonVersion = json.version;
 
-        // compare the versions
         if (apiReleaseVersion === jsonVersion) {
           console.log("The versions are the same.");
         } else {
