@@ -19,6 +19,7 @@ NOTE: Make sure you refresh the page! Sometimes you will not get the lastest upd
 ------------------------------------------------------------
 Jan, 4, 2023
 It is now 2023! Woohoo!
++ Added documentation to scripts with ChatGPT
 ^ Added the site script to all games
 ------------------------------------------------------------
 Dec, 31
